--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,7 +22,7 @@ body
 .header
  position: relative
  height: 95vh
- background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0%, rgba(1, 1, 1, 0.7) 100%), url(/img/ballons_picture.png)
+ background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0%, rgba(1, 1, 1, 0.7) 100%), url(img/ballons_picture.png)
  background-size: cover
  background-repeat: no-repeat
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 89%)
