--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,14 +1,13 @@
-@import "abstracts/variables.sass"
-@import "abstracts/mixins.sass"
-@import "abstracts/functions.sass"
-@import "base/animations.sass"
-@import "base/base.sass"
-@import "base/typography.sass"
-@import "base/utilites.sass"
-@import "components/buttons.sass"
-@import "layout/header.sass"
-@import "pages/home.sass"
-
-
-
-
+@use "abstracts/variables"
+@use "abstracts/mixins"
+@use "abstracts/functions"
+@use "base/animations"
+@use "base/base"
+@use "base/typography"
+@use "base/utilites"
+@use "components/buttons"
+@use "components/button-text"
+@use "components/composition"
+@use "layout/header"
+@use "layout/about"
+@use "pages/home"
