--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -4,3 +4,10 @@ $brown-l: #BA8554
 $brown-d: #A14F03
 $gradient1: linear-gradient(90deg, #ba8554b3 0%, rgba(black, 0.7) 100%)
 $box-shadow: (0 .4rem .4rem rgba(black, 0.3))
+
+// Размеры шрифтов
+$paragraf: 1.6rem
+$header-h2: 3.6rem
+$header-h3: 2rem
+
+ 
