--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -8,7 +8,7 @@ html
 
 body
   padding: 5rem
-  background-color: $color-primary
+  background-color: white
 
 .container
   background-color: #F7F7F7
