--- a/sass/components/_composition.sass
+++ b/sass/components/_composition.sass
@@ -1,10 +1,9 @@
-// .composition__photo
-//  width: 80%
-//  box-shadow: $box-shadow
-//  border-radius: .5rem
-//  &__n1
-//  &__n2
-//  &__n3
-
-img
- width: 80%
+.composition
+ width: 50%
+ &__photo
+  width: 55%
+  box-shadow: $box-shadow
+  border-radius: .5rem
+  &__n1
+  &__n2
+  &__n3
