--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,13 +1,13 @@
-@use "abstracts/variables"
-@use "abstracts/mixins"
-@use "abstracts/functions"
-@use "base/animations"
-@use "base/base"
-@use "base/typography"
-@use "base/utilites"
-@use "components/buttons"
-@use "components/button-text"
-@use "components/composition"
-@use "layout/header"
-@use "layout/about"
-@use "pages/home"
+@import "abstracts/variables"
+@import "abstracts/mixins"
+@import "abstracts/functions"
+@import "base/animations"
+@import "base/base"
+@import "base/typography"
+@import "base/utilites"
+@import "components/buttons"
+@import "components/button-text"
+@import "components/composition"
+@import "layout/header"
+@import "layout/about"
+@import "pages/home"
