--- a/sass/layout/_adventure.sass
+++ b/sass/layout/_adventure.sass
@@ -1,6 +1,9 @@
-.section-cards
+.section-adventure
+ display: flex
+ gap: 6rem
+ justify-content: center
  height: 95vh
  background: url("/img/ballons_picture2.png")
- background-size: contain
+ background-size: cover
  background-repeat: no-repeat
  clip-path: polygon(0 0, 100% 13%, 100% 100%, 0 87%)
