--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,7 +8,8 @@
 @import "components/buttons"
 @import "components/button-text"
 @import "components/composition"
+@import "components/card"
 @import "layout/header"
 @import "layout/about"
-@import "layout/cards"
+@import "layout/adventure"
 @import "pages/home"
