--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -5,6 +5,10 @@
  background-color: rgba(255, 255, 255, 0.8)
  border-radius: .5rem
  text-align: center
+ box-shadow: $box-shadow
+ transition: all .3s
+ &:hover
+  transform: translateY(-2rem) scale(1.1)
  &__icon
   height: 6.2rem
   margin-bottom: 2.5rem
