--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,7 +9,9 @@
 @import "components/button-text"
 @import "components/composition"
 @import "components/card"
+@import "components/tour-card"
 @import "layout/header"
 @import "layout/about"
 @import "layout/adventure"
+@import "layout/tours"
 @import "pages/home"
