--- a/sass/components/_buttons.sass
+++ b/sass/components/_buttons.sass
@@ -31,3 +31,8 @@
   &_animated
     animation: btnToUp 1.5s ease .5s
     animation-fill-mode: backwards
+
+.btn-mini
+  height: 5.4rem
+  width: 27.7rem
+  margin: 0 auto
