--- a/sass/components/_tour-card.sass
+++ b/sass/components/_tour-card.sass
@@ -1,11 +1,14 @@
 .tour-card
  position: relative
  height: 52rem
- width: 34.1rem
+ width: 31rem
  perspective: 150rem
  -moz-perspective: 150rem
  &__image
+  width: 31rem
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 89%) 
+  margin-bottom: 5.5rem
+  
  &__side
   box-shadow: $box-shadow
   height: 52rem
@@ -15,6 +18,8 @@
   left: 0
   width: 100%
   backface-visibility: hidden
+  border-radius: .5rem
+  overflow: hidden
   &_front
   &_back
    display: flex
@@ -28,16 +33,31 @@
   transform: rotateY(0)
  &__title
   font-size: 2.8rem
-  font-weight: 200
+  font-weight: 300
   text-transform: uppercase
   color: white
+  text-align: right
+  position: absolute
+  top: 17.5rem
+  right: 0
+ &__span
   background: linear-gradient(90deg, #C3956A 4%, rgba(#A14F03, 100%) 100%)
+  &_1
+    padding: 1.4rem 2rem .1rem 2rem
+  &_2
+    position: absolute
+    top: 3.3rem
+    right: 0
+    padding: .1rem 2rem 1.4rem 2rem
  &__list
   list-style: none
-  text-decoration: underline
   font-weight: 700
   li
-   margin-bottom: 2rem
+    display: inline-block
+    margin-bottom: 2rem
+    border-bottom: 1px solid $color-secondary
+    &:last-child
+      margin-bottom: 0
 
 
 
