--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -8,3 +8,10 @@
 .section-tours
  padding-top: 8rem
  text-align: center
+
+.section-feedback
+ padding-top: 8rem
+ display: flex
+ flex-direction: column
+ align-items: center
+ gap: 8rem
