--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -47,6 +47,8 @@ body
  &:hover
   transform: skewY(2deg) skewX(10deg) scale(1.05)
   text-shadow: 0rem .4rem .4rem rgba(black, .25)
+ &_white
+  color: white
 
 .title-third
   font-size: $header-h3
