--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,8 +10,10 @@
 @import "components/composition"
 @import "components/card"
 @import "components/tour-card"
+@import "components/feedback-card"
 @import "layout/header"
 @import "layout/about"
 @import "layout/adventure"
 @import "layout/tours"
+@import "layout/feedback"
 @import "pages/home"
