--- a/sass/components/_feedback-card.sass
+++ b/sass/components/_feedback-card.sass
@@ -2,17 +2,41 @@
  width: 98rem
  height: 26.7rem
  background-color: rgba(255, 255, 255, 0.75)
- // clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%)
+ // clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%) Иначе тени не работают
  transform: skewX(-15deg)
  box-shadow: $box-shadow
  padding: 5rem 17rem
  text-align: left
  & > *
   transform: skewX(15deg)
- &__photo
-  width: 16.7rem
+ &__person
+  width: 16rem
+  height: 16rem
   border-radius: 50%
   shape-outside: circle(50% at 50% 50%)
   -webkit-shape-outside: circle(50% at 50% 50%)
   float: left
   margin-right: 5rem
+  position: relative
+  overflow: hidden
+  img
+   height: 100%
+   transform: scale(1.2)
+   transition: all 1s
+ &__name
+  text-align: center
+  text-transform: uppercase
+  color: $color-primary
+  font-size: 2rem
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -20%)
+  opacity: 0
+  transition: all 1s
+ &:hover &__name
+  transform: translate(-50%, -50%)
+  opacity: 100% 
+ &:hover img
+  transform: scale(1)
+  filter: blur(.3rem) brightness(70%)
