--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -3,6 +3,7 @@ $color-primary: white
 $brown-l: #BA8554
 $brown-d: #A14F03
 $gradient1: linear-gradient(90deg, #ba8554b3 0%, rgba(black, 0.7) 100%)
+$gradient2: linear-gradient(90deg, #C3956A 4%, #A14F03 100%)
 $box-shadow: (0 .4rem .4rem rgba(black, 0.3))
 
 // Размеры шрифтов
