--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,9 +11,12 @@
 @import "components/card"
 @import "components/tour-card"
 @import "components/feedback-card"
+@import "components/bg-video"
+@import "components/form-wrapper"
 @import "layout/header"
 @import "layout/about"
 @import "layout/adventure"
 @import "layout/tours"
+@import "layout/form"
 @import "layout/feedback"
 @import "pages/home"
