--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -35,6 +35,8 @@ body
   margin-bottom: 6.5rem
 
 .title-secondary
+ position: relative
+ z-index: 3
  text-align: center
  font-size: $header-h2
  letter-spacing: 1rem
