--- a/sass/components/_form-wrapper.sass
+++ b/sass/components/_form-wrapper.sass
@@ -18,7 +18,7 @@
  padding: 5rem
  width: 71.8rem
  &__group
-  margin-bottom: 5rem
+  margin-bottom: 2rem
   input
    color: black
    font-size: $paragraf
@@ -29,7 +29,7 @@
    border: none
    border-bottom: .3rem solid transparent
    border-radius: .3rem
-   width: 55%
+   width: 75%
    &:focus
     outline: none 
     border-bottom: .3rem solid #66D763 
@@ -40,8 +40,6 @@
     opacity: 0
     visibility: none
     transform: translateY(-3rem) 
-
-
   label
    color: $color-secondary
    font-size: $paragraf
@@ -50,8 +48,40 @@
    display: block
    margin: 1rem 0 0 1.5rem
    transition: 1s all
-   
-    
 
+.form-radio
+  &__group
+    width: 45%
+    display: inline-block
+    position: relative
+    label
+      cursor: pointer
+      padding-left: 4rem
+    input
+      display: none
+    input:checked ~ label span::after
+      opacity: 1
 
+    span
+      height: 3rem
+      width: 3rem
+      border-radius: 50%
+      border: .5rem solid $brown-l
+      display: block
+      position: absolute
+      left: -.95rem
+      top: -.7rem
+      &::after
+        content: ""
+        display: block
+        height: 1.5rem
+        width: 1.5rem
+        border-radius: 50%
+        background: $brown-l
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        transition: .2 all
+        opacity: 0
   
