--- a/sass/layout/_navigation.sass
+++ b/sass/layout/_navigation.sass
@@ -3,36 +3,41 @@
   display: none
  &__button
   background: $color-primary
-  height: 9rem
-  width: 9rem
+  height: 7rem
+  width: 7rem
   border-radius: 50%
   position: fixed
-  top: 7rem
-  right: 7rem
+  top: 10rem
+  right: 10rem
   z-index: 7
+  text-align: center
+  cursor: pointer
  &__background
-  width: 7rem
-  height: 7rem
+  width: 5rem
+  height: 5rem
   border-radius: 50%
   background: radial-gradient($brown-l, $brown-d)
   position: fixed
-  right: 8rem
-  top: 8rem
+  right: 11rem
+  top: 11rem
   z-index: 5
-  transform: scale(100)
+  transition: .3s all
  &__nav
   height: 100vh
-  width: 100%
+  width: 0
   position: fixed
   top: 0
   right: 0
   z-index: 6
+  opacity: 0
+  transition: .3s all cubic-bezier(0.68, -0.6, 0.32, 1.6)
  &__list
   list-style: none
   position: absolute
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
+  width: 100%
  &__item
   text-align: center
   &:not(:last-child)
@@ -47,7 +52,7 @@
    color: $color-primary
    text-decoration: none
    background: linear-gradient(120deg, transparent 0%, transparent 50%, $color-primary 50%)
-   background-size: 220%
+   background-size: 225%
    transition: .8s all
    padding: 1rem 2rem
    display: inline-block
@@ -55,3 +60,44 @@
    background-position: 100%
    color: $brown-l
    transform: translateX(1rem)
+ &__toggle:checked ~ &__background
+  transform: scale(100)
+ &__toggle:checked ~ &__nav
+  width: 100%
+  opacity: 1
+
+ &__icon
+  position: relative
+  margin-top: 35px
+  &,
+  &::before,
+  &::after
+    width: 30px
+    height: 2px
+    background-color: black
+    display: inline-block
+  &::before,
+  &::after
+    content: ""
+    position: absolute
+    left: 0
+    transition: all .2s
+  &::before
+    top: -8px
+  &::after
+    top: 8px
+ 
+ &__button:hover &__icon::before
+  top: -10px
+ &__button:hover &__icon::after
+  top: 10px
+
+ &__toggle:checked + &__button &__icon
+  background: transparent
+ &__toggle:checked + &__button &__icon:before
+  top: 0
+  transform: rotate(135deg)
+ &__toggle:checked + &__button &__icon:after
+  top: 0
+  transform: rotate(-135deg)
+
