--- a/sass/layout/_form.sass
+++ b/sass/layout/_form.sass
@@ -2,6 +2,9 @@
  height: 70rem
  padding: 10rem
  background: $gradient2
+ @include respond(tab-land)
+    padding: 6rem
+    height: 60rem
 
 form
  position: relative
