--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -21,6 +21,8 @@ body
   animation-delay: 1s
   animation-timing-function: ease
   animation-fill-mode: backwards
+  @include respond(tab-land)
+   font-size: 4rem
  &__secondary
   display: block
   letter-spacing: .5rem
@@ -33,6 +35,9 @@ body
   animation-timing-function: ease
   animation-fill-mode: backwards
   margin-bottom: 6.5rem
+  @include respond(tab-land)
+   font-size: 3rem
+   margin-bottom: 3.5rem
 
 .title-secondary
  position: relative
@@ -46,6 +51,9 @@ body
  -webkit-background-clip: text
  color: transparent
  transition: .4s all
+ @include respond(tab-land)
+   font-size: 2.6rem
+   margin-bottom: 5rem !important
  &:hover
   transform: skewY(2deg) skewX(10deg) scale(1.05)
   text-shadow: 0rem .4rem .4rem rgba(black, .25)
@@ -56,6 +64,8 @@ body
   font-size: $header-h3
   text-transform: uppercase
   font-weight: 700
+  @include respond(tab-land)
+   font-size: 1.7rem
 
 .text
   font-size: $paragraf
@@ -63,4 +73,6 @@ body
   letter-spacing: .2rem
   color: $color-secondary
   line-height: 140%
-
+  @include respond(tab-land)
+   font-size: 1.4rem
+  //  margin-bottom: 4rem !important
