--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -7,6 +7,10 @@
  text-align: center
  box-shadow: $box-shadow
  transition: all .3s
+ @include respond(tab-land)
+   width: 18rem
+   padding: 2.5rem 1.3rem
+ 
  &:hover
   transform: translateY(-2rem) scale(1.1)
  &__icon
@@ -14,3 +18,5 @@
   margin-bottom: 2.5rem
  &__text
   line-height: 120%
+  @include respond(tab-land)
+   font-size: 1.2rem
