--- a/sass/components/_feedback-card.sass
+++ b/sass/components/_feedback-card.sass
@@ -8,6 +8,10 @@
  box-shadow: $box-shadow
  padding: 5rem 17rem
  text-align: left
+ @include respond(tab-land)
+  height: 20rem
+  width: 76rem
+  padding: 2rem 10rem
  & > *
   transform: skewX(15deg)
  &__person
