--- a/sass/components/_form-wrapper.sass
+++ b/sass/components/_form-wrapper.sass
@@ -17,8 +17,12 @@
 .form-booking
  padding: 5rem
  width: 71.8rem
+ @include respond(tab-land)
+    padding: 3rem
  &__group
-  margin-bottom: 2rem
+  margin-bottom: 1rem
+  @include respond(tab-land)
+    margin-bottom: 0
   input
    color: black
    font-size: $paragraf
@@ -30,6 +34,9 @@
    border-bottom: .3rem solid transparent
    border-radius: .3rem
    width: 75%
+   @include respond(tab-land)
+    width: 60%
+    padding: 1rem 0 1rem 1 rem
    &:focus
     outline: none 
     border-bottom: .3rem solid #66D763 
@@ -54,6 +61,9 @@
     width: 45%
     display: inline-block
     position: relative
+    @include respond(tab-land)
+     display: block
+     margin-bottom: 2rem
     label
       cursor: pointer
       padding-left: 4rem
