--- a/sass/layout/_adventure.sass
+++ b/sass/layout/_adventure.sass
@@ -7,3 +7,5 @@
  background-size: cover
  background-repeat: no-repeat
  clip-path: polygon(0 0, 100% 13%, 100% 100%, 0 87%)
+ @include respond(tab-land)
+   gap: 3rem
