--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -12,6 +12,8 @@
    display: inline-block
    &:not(:last-child)
     margin-right: 5rem
+    @include respond(tab-land)
+     margin-right: 1.2rem
  &__link
   &:link, 
   &:visited
