--- a/sass/layout/_tours.sass
+++ b/sass/layout/_tours.sass
@@ -1,4 +1,5 @@
-
 .tour-container
  margin: 0 auto 8rem auto
- justify-content: space-between
+ justify-content: space-around
+ @include respond(tab-land)
+  margin-bottom: 14rem
