--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,9 +1,14 @@
 .section-about
  padding-top: 8rem
  margin-bottom: 8rem
+ @include respond(tab-land)
+   padding-top: 5rem
+   margin-bottom: 5rem
 
 .section-adventure
  padding: 21rem 0
+ @include respond(tab-land)
+   padding: 15rem 0
 
 .section-tours
  padding-top: 8rem
@@ -16,3 +21,5 @@
  flex-direction: column
  align-items: center
  gap: 8rem
+ @include respond(tab-land)
+  gap: 4rem
